# Building minimip libraries.
load("@rules_cc//cc:defs.bzl", "cc_library")

# All other packages in MiniMIP may use any of the testing utils.
package(default_visibility = ["//visibility:public"])

cc_library(
    name = "cuts_separator",
    hdrs = ["cuts_separator.h"],
    deps = [
        "//src:parameters_cc_proto",
        "//src/data_structures:cuts_data",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_library(
    name = "separator_factory",
    hdrs = ["separator_factory.h"],
    deps = [
        "//src:parameters_cc_proto",
        "//src/cutting_interface:aggregating_separator",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
    ]
)

cc_library(
    name = "aggregating_separator",
    srcs = ["aggregating_separator.cc"],
    hdrs = ["aggregating_separator.h"],
    deps = [
        "//src:solver",
        "//src/cutting_interface:cuts_separator",
        "//src/lp_interface:lpi",
        "@com_google_ortools//ortools/base:status_macros",
    ],
)

cc_library(
    name = "cuts_runner",
    srcs = ["cuts_runner.cc"],
    hdrs = ["cuts_runner.h"],
    deps = [
        ":cuts_selector",
        ":cuts_separator",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_library(
    name = "runner_factory",
    hdrs = ["runner_factory.h"],
    deps = [
        "//src/cutting_interface:cuts_runner",
        "//src:parameters_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
    ]
)

cc_library(
    name = "cuts_selector",
    hdrs = ["cuts_selector.h"],
    deps = [
        "//src/data_structures:cuts_data",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_ortools//ortools/base:status_macros",
    ],
)

cc_library(
    name = "selector_factory",
    hdrs = ["selector_factory.h"],
    deps = [
        "//src/cutting_interface:hybrid_selector",
        "//src:parameters_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
    ]
)

cc_library(
    name = "hybrid_selector",
    srcs = ["hybrid_selector.cc"],
    hdrs = ["hybrid_selector.h"],
    deps = [
        "//src:solver",
        "//src/cutting_interface:cuts_selector",
        "//src/lp_interface:lpi",
        "@com_google_ortools//ortools/base:status_macros",
    ],
)
