# Building minimip libraries.
load("@rules_cc//cc:defs.bzl", "cc_library")

# All other packages in MiniMIP may use any of the testing utils.
package(default_visibility = ["//visibility:public"])

cc_library(
    name = "problem",
    srcs = ["problem.cc"],
    hdrs = ["problem.h"],
    deps = [
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/strings",
        "@com_google_ortools//ortools/lp_data:mps_reader",
    ],
)

cc_library(
    name = "mip_data",
    srcs = ["mip_data.cc"],
    hdrs = ["mip_data.h"],
    deps = [
        ":problem",
        ":strong_sparse_matrix",
    ],
)

cc_library(
    name = "mip_types",
    srcs = ["mip_types.cc"],
    hdrs = ["mip_types.h"],
    deps = [
        "@com_google_ortools//ortools/base:strong_vector",
        "@com_google_ortools//ortools/util:strong_integers",
    ],
)

cc_library(
    name = "mip_tree",
    srcs = ["mip_tree.cc"],
    hdrs = ["mip_tree.h"],
    deps = [
        ":mip_types",
        "//src/lp_interface:lpi",
        "@com_google_ortools//ortools/base",
        "@com_google_ortools//ortools/base:strong_vector",
        "@com_google_ortools//ortools/util:strong_integers",
    ],
)

cc_library(
    name = "strong_sparse_matrix",
    srcs = ["strong_sparse_matrix.cc"],
    hdrs = ["strong_sparse_matrix.h"],
    deps = [
        ":strong_sparse_vector",
        "@com_google_ortools//ortools/base",
        "@com_google_ortools//ortools/base:strong_vector",
        "@com_google_ortools//ortools/lp_data:base",
        "@com_google_ortools//ortools/util:strong_integers",
    ],
)

cc_library(
    name = "strong_sparse_vector",
    hdrs = ["strong_sparse_vector.h"],
    deps = [
        ":mip_types",
        "@com_google_ortools//ortools/base",
        "@com_google_ortools//ortools/base:strong_vector",
        "@com_google_ortools//ortools/util:strong_integers",
    ],
)
