# Building minimip libraries.
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

package(default_visibility = ["//visibility:public"])

cmake(
    name = "soplex",
    cache_entries = {
        "CMAKE_CXX_FLAGS": "-Wno-psabi",
        "CMAKE_DISABLE_FIND_PACKAGE_GMP": "True",
        "CMAKE_DISABLE_FIND_PACKAGE_ZLIB": "True",
        "BOOST": "off"
    },
    lib_source = "@soplex//:all_srcs",
    out_static_libs = ["libsoplex.a"],
)

cc_library(
    name = "lpi",
    srcs = ["lpi.cc"],
    hdrs = ["lpi.h"],
    deps = [
         "//src/lp_interface:lp_types",
         "//src/messagehandler:message_handler",
        "//src/minimip:minimip_def",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
    ],
 )

cc_library(
    name = "lpi_glop",
    srcs = ["lpi_glop.cc"],
    hdrs = ["lpi_glop.h"],
    deps = [
        "@com_google_ortools//ortools/base",
        "@com_google_ortools//ortools/lp_data:lp_data_utils",
        "@com_google_ortools//ortools/lp_data:lp_print_utils",
        "@com_google_ortools//ortools/lp_data:proto_utils",
        "@com_google_ortools//ortools/lp_data:scattered_vector",
        "@com_google_ortools//ortools/util:file_util",
        "@com_google_ortools//ortools/util:stats",
        "@com_google_ortools//ortools/util:time_limit",
        "@com_google_ortools//ortools/glop:revised_simplex",
        "@com_google_ortools//ortools/glop:lp_solver",
        "//src/minimip:minimip_def",
        ":lpi",
    ],
)

cc_library(
    name = "lpi_soplex",
    srcs = ["lpi_soplex.cc"],
    hdrs = ["lpi_soplex.h"],
    deps = [
        ":soplex",
        "//src/minimip:minimip_def",
        ":lpi",
    ],
    linkstatic = True,
)

cc_library(
    name = "lpi_factory",
    hdrs = ["lpi_factory.h"],
    deps = [
        ":lpi_glop",
        ":lpi_soplex",
    ]
)

cc_library(
    name = "lp_types",
    hdrs = ["lp_types.h", "sparse_types.h"]
)

cc_library(
    name = "strong_sparse_vector",
    hdrs = ["strong_sparse_vector.h"],
    deps = [
        "@com_google_ortools//ortools/base",
        "@com_google_ortools//ortools/base:strong_vector",
        "@com_google_ortools//ortools/util:strong_integers",
    ],
)

cc_test(
    name = "strong_sparse_vector_test",
    size = "small",
    srcs = ["strong_sparse_vector_test.cc"],
    deps = [
        ":strong_sparse_vector",
        "//minimip/testing:gtest_main",
        "@com_google_ortools//ortools/base",
        "@com_google_ortools//ortools/base:strong_vector",
        "@com_google_ortools//ortools/util:strong_integers",
    ],
)

cc_library(
    name = "strong_sparse_matrix",
    hdrs = ["strong_sparse_matrix.h"],
    srcs = ["strong_sparse_matrix.cc"],
    deps = [
        ":strong_sparse_vector",
        "@com_google_ortools//ortools/base",
        "@com_google_ortools//ortools/base:strong_vector",
        "@com_google_ortools//ortools/util:strong_integers",
        "@com_google_ortools//ortools/lp_data:base",
    ],
)

cc_test(
    name = "strong_sparse_matrix_test",
    size = "small",
    srcs = ["strong_sparse_matrix_test.cc"],
    deps = [
        ":strong_sparse_matrix",
        "//minimip/testing:gtest_main",
        "@com_google_ortools//ortools/base",
        "@com_google_ortools//ortools/base:strong_vector",
        "@com_google_ortools//ortools/util:strong_integers",
        "@com_google_ortools//ortools/lp_data:base",
    ],
)
