# Building minimip libraries.
load("@rules_cc//cc:defs.bzl", "cc_test")

# All other packages in MiniMIP may use any of the testing utils.
package(default_visibility = ["//visibility:public"])

cc_test(
    name = "branching_test",
    size = "small",
    srcs = ["branching_test.cc"],
    deps = [
        "//src/branching_interface:branching_interface",
        "//src/branching_interface:branching_factory",
        "//src:solver",
        "//unit_tests:gtest_main",
        "//unit_tests:utils",
        "@com_google_absl//absl/status",
    ],
)
