# Building minimip libraries.
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

# All other packages in MiniMIP may use any of the testing utils.
package(default_visibility = ["//visibility:public"])

#TODO: Write relevant general unit tests to test defaults and define general rules of functionality to be adhered to.

cc_test(
    name = "separator_test",
    size = "small",
    srcs = ["separator_test.cc"],
    deps = [
        "//src/data_structures:mip_data",
        "//unit_tests:gtest_main",
        "//unit_tests:utils",
        "@com_google_absl//absl/status",
    ],
)

cc_test(
    name = "runner_test",
    size = "small",
    srcs = ["runner_test.cc"],
    deps = [
        "//src/data_structures:mip_data",
        "//unit_tests:gtest_main",
        "//unit_tests:utils",
        "@com_google_absl//absl/status",
    ],
)

cc_test(
    name = "selector_test",
    size = "small",
    srcs = ["selector_test.cc"],
    deps = [
        "//src/data_structures:mip_data",
        "//unit_tests:gtest_main",
        "//unit_tests:utils",
        "@com_google_absl//absl/status",
    ],
)
