# Testing utilities.
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

# All other packages in MiniMIP may use any of the testing utils.
package(default_visibility = ["//visibility:public"])

cc_test(
    name = "mip_data_test",
    size = "small",
    srcs = ["mip_data_test.cc"],
    deps = [
        "//unit_tests:utils",
        "//src/data_structures:mip_data",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "strong_sparse_vector_test",
    size = "small",
    srcs = ["strong_sparse_vector_test.cc"],
    deps = [
        "//src/data_structures:strong_sparse_vector",
        "//minimip/testing:gtest_main",
        "@com_google_ortools//ortools/base",
        "@com_google_ortools//ortools/base:strong_vector",
        "@com_google_ortools//ortools/util:strong_integers",
    ],
)

cc_test(
    name = "strong_sparse_matrix_test",
    size = "small",
    srcs = ["strong_sparse_matrix_test.cc"],
    deps = [
        "//src/data_structures:strong_sparse_matrix",
        "//minimip/testing:gtest_main",
        "@com_google_ortools//ortools/base",
        "@com_google_ortools//ortools/base:strong_vector",
        "@com_google_ortools//ortools/util:strong_integers",
        "@com_google_ortools//ortools/lp_data:base",
    ],
)
