# Testing utilities.
load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "mip_data_test",
    size = "small",
    srcs = ["mip_data_test.cc"],
    deps = [
        "//src/data_structures:mip_data",
        "//unit_tests:gtest_main",
        "//unit_tests:utils",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest",
    ],
)

cc_test(
    name = "strong_sparse_vector_test",
    size = "small",
    srcs = ["strong_sparse_vector_test.cc"],
    deps = [
        "//src/data_structures:strong_sparse_vector",
        "//unit_tests:gtest_main",
        "//unit_tests:utils",
        "@com_google_googletest//:gtest",
        "@com_google_ortools//ortools/base",
        "@com_google_ortools//ortools/base:strong_vector",
        "@com_google_ortools//ortools/util:strong_integers",
    ],
)

cc_test(
    name = "strong_sparse_matrix_test",
    size = "small",
    srcs = ["strong_sparse_matrix_test.cc"],
    deps = [
        "//src/data_structures:strong_sparse_matrix",
        "//unit_tests:gtest_main",
        "@com_google_googletest//:gtest",
        "@com_google_ortools//ortools/base",
        "@com_google_ortools//ortools/base:strong_vector",
        "@com_google_ortools//ortools/lp_data:base",
        "@com_google_ortools//ortools/util:strong_integers",
    ],
)
