# Testing utilities.
load("@rules_cc//cc:defs.bzl", "cc_test")

# Tests the implementation of all LP interfaces.
cc_test(
    name = "lpi_test",
    size = "small",
    srcs = ["lpi_test.cc"],
    linkstatic = True,
    deps = [
        "//minimip/data_structures:strong_sparse_vector",
        "//minimip/lp_interface:lpi",
        "//minimip/lp_interface:lpi_factory",
        "//unit_tests:gtest_main",
        "//unit_tests:utils",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest",
    ],
)
